Fix word wrap for long links...

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,23 +12,23 @@
 
     // Positioning context for the mobile navigation icon
     position: relative;
-    /* IE10 Consumer Preview */ 
+    /* IE10 Consumer Preview */
 
     background-image: -ms-linear-gradient(top, darken(#3C3B37, 5%) 0%, darken(#302F2B, 5%) 100%);
 
-    /* Mozilla Firefox */ 
+    /* Mozilla Firefox */
     background-image: -moz-linear-gradient(top, darken(#3C3B37, 5%) 0%, darken(#302F2B, 5%) 100%);
 
-    /* Opera */ 
+    /* Opera */
     background-image: -o-linear-gradient(top, darken(#3C3B37, 5%) 0%, darken(#302F2B, 5%) 100%);
 
-    /* Webkit (Safari/Chrome 10) */ 
+    /* Webkit (Safari/Chrome 10) */
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, darken(#3C3B37, 5%)), color-stop(1, darken(#302F2B, 5%)));
 
-    /* Webkit (Chrome 11+) */ 
+    /* Webkit (Chrome 11+) */
     background-image: -webkit-linear-gradient(top, darken(#3C3B37, 5%) 0%, darken(#302F2B, 5%) 100%);
 
-    /* W3C Markup, IE10 Release Preview */ 
+    /* W3C Markup, IE10 Release Preview */
     background-image: linear-gradient(to bottom, darken(#3C3B37, 5%) 0%, darken(#302F2B, 5%) 100%);
 }
 
@@ -213,7 +213,7 @@
 
 
 .past-posts {
-    
+
 
     li {
         margin: 10px;
@@ -334,6 +334,7 @@
 
     p {
         line-height: 1.3;
+        word-wrap: break-word;
     }
 
     ol li {
